<resources>
    <string name="app_name">xy3-SubBook</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
    <string name="sava">sava</string>
    <string name="back">back</string>
    <string name="textview">TextView</string>
    <string name="textname">textname</string>
    <string name="txtName">Name</string>
    <string name="name">Name</string>
    <string name="entername">EnterName</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="enterprice">EnterPrice</string>
    <string name="enterdate">enterdate</string>
    <string name="enter_date">Enter Date</string>
    <string name="comments">Comments</string>
    <string name="entercomments">EnterComments</string>
    <string name="cancel">Cancel</string>
    <string name="subscription">subscription</string>
    <string name="edit">Edit</string>
    <string name="subscri">Subscri</string>
    <string name="delete">Delete</string>


</resources>
